# monnify-rs

./: Cargo.toml
src/: constants.rs  lib.rs
src/monnify_client/: client.rs
src/resources/: auth.rs  mod.rs  transactions.rs
tests/: test_authenticate.rs  test_transactions.rs
