[package]
name = "monnify"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.25", features = ["json"] }

serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
uuid = { version = "1.19.0", features = ["v4"] }
